# cpu-sieve

./: .gitignore  seq.c  zipf.c
attack_sim/: meson.build
attack_sim/src/: cache.h  discovery.c  lib.c  lib.h  occupation.c  pattern.c  pattern.h
attack_sim/src/algorithms/: algorithm.c  algorithm.h  three_tree.c  tree_plru.c  two_tree.c
bench/configs/: run_spec.py
bench/configs/system/: system.py
bench/launch/: parsec.py  spec.py
bench/parsec/: parsec-install.sh  parsec.json
bench/simple/: sequential.c
bench/spec-2017/: install-spec2017.sh  runscript.sh  spec-2017.json
benchmark/: .gitignore
benchmark/parsec/: parsec-install.sh  parsec.json
benchmark/spec-2017/: spec-2017.json
data_scripts/: miss-ratio-old.py  miss-ratio.py  numbers.ipynb  occupation.ipynb  parsec_old.ipynb  spec.ipynb
eviction/: meson.build
eviction/src/: bypass.c  cache.c  cache.h  dram_hits.c  lib.c  occupation.c  pattern.c  pattern.h
eviction/src/algorithms/: algorithm.c  algorithm.h  random.c  sieve.c  splru.c  tree_plru.c  twoq.c
eviction_testing/: Cargo.toml
eviction_testing/src/: access_patterns.rs  algorithms.rs  cache.rs  logger.rs  main.rs
eviction_testing/src/access_patterns/: double.rs  double_skip.rs  random.rs  sequential.rs  triple.rs
eviction_testing/src/algorithms/: fifo.rs  lru.rs  nru.rs  random.rs  rrip.rs  sieve.rs  sieve_tree.rs  tree_plru.rs
mem_patterns/: seq.c  zipf.c
mem_patterns/babylon/: Makefile
parsec/configs/: run_parsec.py
run_scripts/: cli_trace_gen_spec.py  cli_trace_parsec.py  cli_trace_spec.py  evset_bypass.py  evset_occupation.py  gem5_test.py  launch_spec2017.py  miss-ratio.py  occupation.py  parsec.py  spec.py  trace_gen_spec_cpts.py  trace_spec.py
run_scripts/bench/: parsec.py  parsec_gem5.py  parsec_trace.py  parsec_trial.py  spec_trace.py  spec_trace_gen_config.py  spec_trace_generate.py  spec_trial.py  spec_trial_old.py  test_trial.py
run_scripts/spec/: run.py
writing/: main.tex  sources.bib  template.tex  thesis.tex  usenix.tex  writing_sample.tex
writing/bibs/: adaptive insertion policies.bib  cache attacks and countermeasures.bib
writing/references/: parsec.bib
(+9 files in other folders)
